--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
-@import "tailwindcss";
-@plugin "tailwindcss-animate";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   :root {
@@ -53,7 +54,7 @@
   }
 
   body {
-    background-color: #FBF9F6;
+    background-color: #fbf9f6;
     color: hsl(var(--foreground));
     font-family: "Nunito Sans", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -66,16 +67,16 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: #FBF9F6;
+    background: #fbf9f6;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #D1CFCC;
+    background: #d1cfcc;
     border-radius: 5px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: #2E403B;
+    background: #2e403b;
   }
 }
 
@@ -94,7 +95,9 @@
   }
 
   .shadow-neu-toggle {
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 10px rgba(0, 0, 0, 0.05);
+    box-shadow:
+      inset 0 0 5px rgba(0, 0, 0, 0.1),
+      inset 0 0 10px rgba(0, 0, 0, 0.05);
   }
 
   .shadow-elegant {
